Fix the overflow as the wrapper was to hard capped

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@
 .wrapper {
     display: grid;
     gap: 5px;
-    grid-template-rows: 1fr minmax(500px, 5fr);
+    grid-template-rows: 250px minmax(500px, 5fr);
     grid-template-columns: 1fr 4fr;
-    height: 100vh;
+    min-height: 100vh;
 
     min-width: 1300px;
 }
@@ -38,7 +38,8 @@
 
 .sidebar > *,
 .header-row1> *,
-.header-row2 > * {
+.header-row2 > *,
+.card {
     background-color: rgb(241, 229, 201);
 }
 
@@ -103,7 +104,7 @@ input[type="search"]:focus {
 
 button {
     border-radius: 40px;
-    height: 60%;
+    height: 50px;
     width: 100%;
     justify-self: center;
     border: none;
@@ -135,7 +136,7 @@ button {
 
 .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
     gap: 30px;
 }
 
@@ -147,4 +148,11 @@ h2 {
     display: grid;
     grid-template-columns: 48px 48px 48px;
     justify-content: end;
+    padding-top: 40px;
+}
+
+.card {
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 1.3em;
 }
